Aggiornamento. Creazione notifica kcal e salvataggio dati kcal

--- a/app/src/main/res/layout/registrazione.xml
+++ b/app/src/main/res/layout/registrazione.xml
@@ -213,6 +213,8 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="Inserisci"
+                android:tag="kcal"
+                android:onClick="FunzioniInserisciRegistrazioni"
                 >
             </Button>
         </LinearLayout>
