--- a/app/src/main/res/layout/registrazione.xml
+++ b/app/src/main/res/layout/registrazione.xml
@@ -238,6 +238,8 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="Inserisci"
+                android:tag="note"
+                android:onClick="FunzioniInserisciRegistrazioni"
                 >
             </Button>
         </LinearLayout>
