--- a/app/src/main/res/layout/registrazione.xml
+++ b/app/src/main/res/layout/registrazione.xml
@@ -34,6 +34,7 @@
                 >
             </TextView>
             <EditText
+                android:id="@+id/nomeRegistrazione"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
@@ -57,6 +58,7 @@
                 >
             </TextView>
             <EditText
+                android:id="@+id/cognomeRegistrazione"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
@@ -80,9 +82,11 @@
                 >
             </TextView>
             <EditText
+                android:id="@+id/etaRegistrazione"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
                 >
             </EditText>
         </LinearLayout>
@@ -103,6 +107,7 @@
                 >
             </TextView>
             <EditText
+                android:id="@+id/nomeUtenteRegistrazione"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
@@ -126,9 +131,11 @@
                 >
             </TextView>
             <EditText
+                android:id="@+id/altezzaRegistrazione"
                 android:layout_width="0dp"
                 android:layout_weight="0.8"
                 android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
                 >
             </EditText>
             <TextView
@@ -260,6 +267,7 @@
                     android:layout_height="wrap_content"
                     android:text="Salva"
                     android:layout_marginRight="10dp"
+                    android:onClick="SalvaAll"
                     >
 
                 </Button>
@@ -268,6 +276,7 @@
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:text="Ripristina"
+                    android:onClick="RipristinaDati"
                     >
                 </Button>
             </LinearLayout>
