--- a/app/src/main/res/layout/registrazione.xml
+++ b/app/src/main/res/layout/registrazione.xml
@@ -284,6 +284,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="--->"
+                android:onClick="PassaPagina3"
                 android:layout_gravity="center"
                 >
             </Button>
