--- a/app/src/main/res/layout/crea_giorno.xml
+++ b/app/src/main/res/layout/crea_giorno.xml
@@ -50,21 +50,11 @@
         android:padding="10dp"
         >
         <Button
-            android:id="@+id/salvaGiorno"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="Salva"
-            android:layout_marginRight="10dp"
-            >
-
-        </Button>
-        <Button
             android:id="@+id/backGiorno"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="---"
+            android:text="Back"
 
             >
         </Button>
