--- a/app/src/main/res/layout/note_dettaglio.xml
+++ b/app/src/main/res/layout/note_dettaglio.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -23,11 +23,18 @@
             android:id="@+id/noteDettaglio"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
-
+            android:layout_height="200dp"
             >
         </EditText>
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+
+        >
         <Button
             android:id="@+id/SalvaNote"
             android:layout_width="wrap_content"
