Porca troia. Ho provato a fare il tasto rimuovi per ogni elemento, ma non funziona. Si bugga tutto. Ho tolto la possibilita di rimozione per ora. Cazzo

--- a/app/src/main/res/layout/crea_scheda.xml
+++ b/app/src/main/res/layout/crea_scheda.xml
@@ -46,7 +46,7 @@
     </Button>
     <ListView
         android:id="@+id/listaGiorniView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </ListView>
 
