--- a/app/src/main/res/layout/crea_giorno.xml
+++ b/app/src/main/res/layout/crea_giorno.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/drawable_creascheda"
+    android:padding="20dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,7 +36,9 @@
         android:layout_height="wrap_content"
         android:text="Aggiungi esercizio"
         android:layout_gravity="center"
+        android:background="@drawable/drawable_item_esercizio"
         android:onClick="AggiungiGiorno"
+        android:padding="10dp"
         >
     </Button>
     <ListView
@@ -44,17 +48,20 @@
     </ListView>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:orientation="horizontal"
+        android:layout_marginTop="10dp"
         android:padding="10dp"
         >
         <Button
             android:id="@+id/backGiorno"
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:text="Back"
+            android:layout_gravity="center"
+            android:background="@drawable/drawable_botton_grey"
 
             >
         </Button>
