--- a/app/src/main/res/layout/schede_pag3.xml
+++ b/app/src/main/res/layout/schede_pag3.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:text="Crea Scheda"
         android:onClick="CreaScheda"
+        android:background="@drawable/drawable_botton_grey"
         >
     </Button>
 
