--- a/app/src/main/res/layout/item_giorni.xml
+++ b/app/src/main/res/layout/item_giorni.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="20dp">
+    android:padding="20dp"
+    >
 
     <Button
         android:id="@+id/visualizzaGiorni"
@@ -12,6 +13,8 @@
         android:text="Scheda1"
         android:layout_weight="1"
         android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/drawable_item_giorno"
         >
     </Button>
 
