--- a/app/src/main/res/layout/item_scheda.xml
+++ b/app/src/main/res/layout/item_scheda.xml
@@ -1,23 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="100dp"
     android:orientation="horizontal"
+
     android:padding="20dp">
+
 
     <ImageView
         android:id="@+id/immagineScheda"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_weight="0.4"
+        android:background="@drawable/drawable_immagine_scheda"
+        android:layout_marginRight="10dp"
         >
 
     </ImageView>
     <Button
         android:id="@+id/visualizzaScheda"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:text="Scheda1"
+        android:textColor="@color/white"
+        android:background="@drawable/drawable_scheda"
         android:onClick="OnSchedaClick"
         android:layout_weight="1"
         android:layout_marginRight="10dp"
