--- a/app/src/main/res/layout/crea_esercizio.xml
+++ b/app/src/main/res/layout/crea_esercizio.xml
@@ -48,9 +48,11 @@
 
         <ImageButton
             android:id="@+id/immagineEsercizio"
-            android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
+            android:scaleType="centerCrop"
+            android:adjustViewBounds="true"
+            android:layout_width="wrap_content"
             >
         </ImageButton>
 
