--- a/app/src/main/res/layout/schede_pag3.xml
+++ b/app/src/main/res/layout/schede_pag3.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="20dp">
 
     <Button
         android:layout_gravity="center"
@@ -12,6 +13,7 @@
         android:text="Crea Scheda"
         android:onClick="CreaScheda"
         android:background="@drawable/drawable_botton_grey"
+        android:layout_marginBottom="10dp"
         >
     </Button>
 
