--- a/app/src/main/res/layout/crea_esercizio.xml
+++ b/app/src/main/res/layout/crea_esercizio.xml
@@ -5,6 +5,14 @@
     android:orientation="vertical"
     android:background="@drawable/drawable_creaesercizio"
     android:padding="10dp">
+    <Button
+        android:onClick="ChiudTuttoNonSalva"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/ic_baseline_close_24"
+        android:contentDescription="Cancella Tutto"
+        >
+    </Button>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
