--- a/app/src/main/res/layout/item_esercizi.xml
+++ b/app/src/main/res/layout/item_esercizi.xml
@@ -17,6 +17,16 @@
         android:background="@drawable/drawable_item_esercizio"
         >
     </Button>
+    <Button
+        android:id="@+id/deleteEsercizi"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:onClick="OnDeleteExPerGiornoClick"
+        android:layout_weight="0.2"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/ic_baseline_close_24"
+        >
+    </Button>
 
 
 </LinearLayout>
