--- a/app/src/main/res/layout/item_giorni.xml
+++ b/app/src/main/res/layout/item_giorni.xml
@@ -17,6 +17,17 @@
         android:background="@drawable/drawable_item_giorno"
         >
     </Button>
+    <Button
+        android:id="@+id/eliminaGiorno"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:textColor="@color/white"
+        android:background="@drawable/ic_baseline_close_24"
+        android:onClick="OnDeleteGiornoClick"
+        android:layout_weight="0.2"
+        android:layout_marginRight="10dp"
+        >
+    </Button>
 
 
 </LinearLayout>
