--- a/app/src/main/res/layout/registrazione.xml
+++ b/app/src/main/res/layout/registrazione.xml
@@ -262,23 +262,24 @@
                 android:padding="10dp"
                 >
                 <Button
+                    android:id="@+id/salvaButtonReg"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:text="Salva"
                     android:background="@color/azzurrino"
                     android:layout_marginRight="10dp"
-                    android:onClick="SalvaAll"
+
                     >
 
                 </Button>
                 <Button
+                    android:id="@+id/ripristinaDatiButton"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:text="Ripristina"
                     android:background="@color/azzurrino"
-                    android:onClick="RipristinaDati"
                     >
                 </Button>
             </LinearLayout>
@@ -289,7 +290,6 @@
                 android:text="Next"
                 android:background="@color/grigio"
                 android:textColor="@color/black"
-                android:onClick="PassaPagina3"
                 android:layout_gravity="center"
                 >
             </Button>
