--- a/app/src/main/res/layout/kcal_dettaglio.xml
+++ b/app/src/main/res/layout/kcal_dettaglio.xml
@@ -44,6 +44,7 @@
                 android:gravity="center"
                 ></TextView>
             <RadioGroup
+                android:id="@+id/radioGroup"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
