--- a/app/src/main/res/layout/note_dettaglio.xml
+++ b/app/src/main/res/layout/note_dettaglio.xml
@@ -23,7 +23,7 @@
             android:id="@+id/noteDettaglio"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="200dp"
+            android:layout_height="wrap_content"
             >
         </EditText>
     </LinearLayout>
