Serie di cose pt2

--- a/app/src/main/res/drawable/drawable_creasgiorno.xml
+++ b/app/src/main/res/drawable/drawable_creasgiorno.xml
@@ -3,9 +3,7 @@
 <item>
     <shape
         android:shape="rectangle">
-        <corners
-            android:bottomRightRadius="40dp"
-            android:topLeftRadius="40dp">
+        <corners>
         </corners>
         <solid
             android:color="@color/arancione">
