--- a/app/src/main/res/drawable/drawable_creaesercizio.xml
+++ b/app/src/main/res/drawable/drawable_creaesercizio.xml
@@ -3,8 +3,7 @@
 <item>
     <shape
         android:shape="rectangle">
-        <corners
-            android:radius="20dp">
+        <corners>
         </corners>
         <solid
             android:color="@color/white">
