--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_centerInParent="true"
         >
         <TextView
+            android:id="@+id/testoUtenteInizia"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="BENVENUTO"
@@ -26,6 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="Inizia"
+            android:layout_gravity="center"
             android:text="INIZIA"
 
             />
